Creation of the first activity's layout

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,13 @@
 <resources>
     <string name="app_name">GestionBudget</string>
+    <string name="projectTitle">GestionBudget</string>
+    <string name="editTextTotalBudget">Total Budget</string>
+    <string name="editTextFood">Food</string>
+    <string name="editTextGoOut">Go Out</string>
+    <string name="editTextHouseHold">Household</string>
+    <string name="editTextClothes">Clothes</string>
+    <string name="editTextTransport">Transport</string>
+    <string name="editTextRent">Rent</string>
+    <string name="editTextSalary">Salary</string>
+    <string name="buttonConfirmed">Confirmed</string>
 </resources>
