--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="editTextRent">Rent</string>
     <string name="editTextSalary">Salary</string>
     <string name="buttonConfirmed">Confirmed</string>
+    <string name="buttonDialogue">Yes</string>
 </resources>
